@@ -1,5 +1,7 @@
 Revision history for Perl extension CGI::Header.
 
+  - [DOCUMENTATION] Add HTTP::Headers to "SEE ALSO"
+
 0.11  Dec 16th, 2012
   - Add FIRSTKEY() and NEXTKEY(). These methods were implemented to
     test this module itself.
